--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Roboto:wght@100&display=swap');
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Inconsolata', monospace;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 650;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -37,11 +38,20 @@ h1 {
   line-height: 1.1;
 }
 
+input {
+  margin-left: 2.5px; 
+}
+
+ul {
+  cursor:pointer;
+}
+
 button {
-  border-radius: 8px;
+  border-radius: 4px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.2em 1.2em;
+  margin-left: 5px;
+  font-size: 13px;
   font-weight: 500;
   font-family: inherit;
   color: black;
