--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
+.content {
+  position: absolute;
+  top: 25%;
+  left: 45%;
+  margin: auto;
+}
 /* animations */
 .fade-in {
   -webkit-animation: fadein 500ms; /* Safari, Chrome and Opera > 12.1 */
@@ -45,9 +51,24 @@
   to   { opacity: 1; }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Extra small devices (phones, 600px and down)
+@media only screen and (max-width: 600px) {
+  
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up)
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up)
+@media only screen and (min-width: 768px) {
+} 
+
+/* Large devices (laptops/desktops, 992px and up)
+@media only screen and (min-width: 992px) {
+} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) 
+@media only screen and (min-width: 1200px) {
+}*/
 
