--- a/src/assets/components/common/header/Header.css
+++ b/src/assets/components/common/header/Header.css
@@ -4,7 +4,7 @@
     left:0;
     width: 100%;
     display: flex;
-    align-items: center;
+    text-align: center;
     flex-direction: row;
     justify-content: space-between;
 
